# TelEcom

./: .gitignore
.github/workflows/: cicd.yml  python-linter.yml
api/: .isort.cfg  Dockerfile  Dockerfile-production  pyproject.toml  pytest.ini
api/app/: settings.py  urls.py
api/apps/catalog/: admin.py  models.py
api/apps/catalog/api/: serializers.py  urls.py  views.py
api/apps/catalog/contrig/: catalog.py
api/apps/catalog/migrations/: 0001_initial.py
api/deploy/: update-ecs.py
nginx/: nginx.conf
provisioning/: docker-compose.yml
terraform/: .terraform.lock.hcl  02_network.tf  06_logs.tf  07_keypair.tf  08_ecs.tf  10_rds.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/templates/: telecom_api.json.tpl  telecom_api_migrations.json.tpl
