[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.env
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "telecom"
version = "0.1.0"
description = ""
authors = ["Ihor <cguilliman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.6"
Django = "^4.1"
djangorestframework = "^3.13.1"
black = "^22.6.0"
isort = "^5.10.1"
invoke = "^1.7.1"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.3"
boto3 = "^1.24.70"
click = "^8.1.3"
pytest-django = "^4.5.2"
pytest = "^7.1.3"
kafka-python = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
